pom file updates